@@ -55,6 +55,7 @@ Views 6.x-3.x-dev
     o #228510 by dagmar, KarenS and others: Exposed sorts!!!
     o #621780 by PaulMagrath: Even/Odd classes wrong with grouping due to row numbering no longer being sequential.
     o #660140 by dagmar: Add a raw user name filter so that we can do more filtering purely on the user name.
+    o #383994 by bendiy: Allow column align setting on tables.
 
 Views 6.x-3.0-alpha1
   Bugs fixed
